feat: generate list in load and add new tasks

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/YKerroum/To-Do-list#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
