--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "to-do-list",
+  "jest": {
+    "verbose": true,
+    "resetMocks": false,
+    "setupFiles": ["jest-localstorage-mock"]
+  },
   "version": "1.0.0",
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "webpack serve --open",
     "build": "webpack"
   },
@@ -20,6 +25,7 @@
   },
   "homepage": "https://github.com/YKerroum/To-Do-list#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -31,6 +37,9 @@
     "eslint-plugin-import": "^2.26.0",
     "hint": "^7.1.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-localstorage-mock": "^2.4.22",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
