feat: add tests to dom manipulation

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "jest": {
     "verbose": true,
     "resetMocks": false,
-    "setupFiles": ["jest-localstorage-mock"]
+    "setupFiles": ["jest-localstorage-mock"],
+    "testEnvironment": "jsdom"
   },
   "version": "1.0.0",
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
